app/globals.css
@import "tailwindcss";

:root {

  --background: #07181D;

  --foreground: #F5F1E8;

}

@theme inline {

  --color-background:
    var(--background);

  --color-foreground:
    var(--foreground);

  --font-sans:
    var(--font-geist-sans);

  --font-mono:
    var(--font-geist-mono);

}

* {

  box-sizing: border-box;

}

html {

  scroll-behavior: smooth;

}

body {

  background:
    var(--background);

  color:
    var(--foreground);

  font-family:
    Arial, Helvetica, sans-serif;

  text-rendering:
    optimizeLegibility;

  -webkit-font-smoothing:
    antialiased;

  overflow-x:
    hidden;

}

::selection {

  background:
    rgba(198,164,106,0.22);

  color:
    #F5F1E8;

}

/* SCROLLBAR */

::-webkit-scrollbar {

  width: 10px;

}

::-webkit-scrollbar-track {

  background:
    rgba(255,255,255,0.03);

}

::-webkit-scrollbar-thumb {

  background:
    rgba(198,164,106,0.34);

  border-radius:
    999px;

}

::-webkit-scrollbar-thumb:hover {

  background:
    rgba(198,164,106,0.52);

}

